sass/_desktop.scss
.desktop-header {
	background: #fff;
	border-bottom: 1px solid $black;
	display: flex;
	font-size: 1.1rem;
	justify-content: space-between;
	padding: 10px;
	
	a {
		color: $black;
		text-decoration: none;
	}
}

.desktop-title {
	font-weight: bold;
	margin-right: 2rem;
	display: inline-block;
}

.desktop-nav {
	display: inline-block;
	a {
		margin-right: .5rem;
	}
}

.dektop-social {
}

